--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
 	],
 	"description": "",
 	"main": "./dist/index.js",
+	"engines": {
+		"node": "^8.9.1",
+		"npm": "^6.11.1"
+	},
 	"scripts": {
 		"test": "jest",
 		"lint": "eslint --ignore-path .gitignore .",
@@ -27,7 +31,7 @@
 	"author": "Dan Hughes",
 	"license": "MIT",
 	"dependencies": {
-		"axios": "^0.17.1",
+		"axios": "^0.19.0",
 		"moment": "^2.20.1"
 	},
 	"devDependencies": {
